[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[dependencies]
primes = "0.3.0"
regex = { version = "1.6.0" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
